--- a/Portfolio/src/pages/Portfolio/index.scss
+++ b/Portfolio/src/pages/Portfolio/index.scss
@@ -651,20 +651,24 @@
 
 @media screen and (max-width: 800px) {
   .portfolio-page {
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 0;
+    padding-right: 0;
     width: 100%;
+    margin-left: 0;
+    padding-top: 20px;
+    overflow-x: hidden;
 
     h1.page-title {
-      margin-left: 0;
+      margin-left: 20px;
       margin-top: 80px;
-      font-size: 4rem;
-      text-align: center;
+      font-size: 3rem;
+      text-align: left;
     }
   }
 
   .projects-grid {
-    padding: 2rem 0 10rem 0;
+    padding: 2rem 20px 10rem 20px;
     gap: 2rem;
+    grid-template-columns: 1fr;
   }
 }
